# gcdtest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
